Edit swager
